# ML-Project-CPP

./: .gitignore  CMakeLists.txt  README.md
CUDA/: .gitignore  CMakeLists.txt  helper.cu  main.cu  ojas  ojas.cu
notes/: theory.md
src/: ClHelper.cpp  ClHelper.h  Kernels.cl  Model.cpp  Model.h  main.cpp  testmain.cpp
src/MNIST/: mnist_loader.cpp  mnist_loader.h
